@@ -1,3 +1,7 @@
+2011-04-09 Borut Razem <borut.razem AT gmail.com>
+
+	* sim/ucsim/cmd.src/cmdpars.y: removed warnings
+
 2011-04-07 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* device/lib/mcs51/Makefile.in,
